--- a/popup.html
+++ b/popup.html
@@ -116,8 +116,7 @@
 <h1>Türkçe Web Klavyesi</h1>
 
 <div class="logo">
-    <!-- Logo yerine geçici simge -->
-    <div style="width:64px; height:64px; background-color:#2a2a2a; border-radius:10px; color:white; display:inline-flex; justify-content:center; align-items:center; font-size:28px; font-weight:bold;">TK</div>
+    <img src="images/icon100.png" alt="Türkçe Klavye Logo" width="100" height=100">
 </div>
 
 <div class="status active" id="status">
